--- a/memory-match-cards/privacy-policy.html
+++ b/memory-match-cards/privacy-policy.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-   <h1> PRIVACY POLICY MODEL FOR MEMORY MATCH CARDS APPLICATION </h1>
+   <h1> PRIVACY POLICY FOR MEMORY MATCH CARDS APPLICATION </h1>
         <p> Based on a templated provided by https://www.docracy.com/6016/mobile-privacy-policy# </p>
 
         <p> Hereafter, the application known as Memory Match Cards will be referred to as "The Application". </p>
