--- a/quizudo/privacy-policy.html
+++ b/quizudo/privacy-policy.html
@@ -40,7 +40,7 @@
 
     <h3> Data Retention Policy, Managing Your Information </h3>
     <p>
-        The only data retained by The Application is a selection of anonymous best scores, which are not attached to any user account or any name. These high scores are not transmitted by The Application to any external server, and are removed on deletion of The Application.
+        The only data saved by The Application is custom quiz questions created by the user. This data is stored in the user's device, is not tramsmitted to any external server, and is removed on deletion of The Application.
     </p>
   
      
