--- a/classic-master-mind/privacy-policy.html
+++ b/classic-master-mind/privacy-policy.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-   <h1> PRIVACY POLICY FOR TURBO MATHS APPLICATION </h1>
+   <h1> PRIVACY POLICY FOR CLASSIC MASTER MIND APPLICATION </h1>
         <p> Based on a templated provided by https://www.docracy.com/6016/mobile-privacy-policy# </p>
 
         <p> Hereafter, the application known as Classic Master Mind will be referred to as "The Application". </p>
